# ms-electron

./: .gitignore  .remarkignore  .remarkrc.yml  .yamllint.yml  DEPS  README.md  package.json  requirements.txt
.azure-devops/: build_chromium_snapshot.yml  build_electron.yml  build_electron_release_with_electron_flavour.yml  build_electron_release_with_media_flavour.yml  build_electron_release_with_teams_flavour.yml  build_electron_release_with_vscode_flavour.yml  build_electron_with_asan.yml  build_ffmpeg.yml  build_linux_container.yml  build_project_snapshot.yml  create_virtual_machine.yml  install_azure_pipelines_agent.yml  lint.yml  mirror_external_binaries.yml  mirror_external_repos.yml  mirror_linux_sysroots.yml  nightly.yml  publish_electron_as_universal_packages.yml  publish_electron_to_azure.yml  publish_electron_to_skype_ivy.yml  publish_experimental_electron_to_azure.yml  publish_mac_symbols_to_app_center.yml  publish_node_headers_to_azure.yml  publish_project_snapshot_to_azure.yml  publish_windows_symbols.yml  release.yml  run_javascript_tests.yml  run_security_tools.yml  validate_electron_flavour.yml  validate_media_flavour.yml  validate_teams_flavour.yml  validate_vscode_flavour.yml
.azure-devops/templates/action/: add_to_path.yml  assert_file_size.yml  azure_cli.yml  build_node_headers.yml  build_spec_modules.yml  build_typescript_definitions.yml  capture_output.yml  checkout_electron.yml  checkout_electron_without_chromium.yml  checkout_self.yml  clean_up_build_directories.yml  configure_git.yml  configure_git_access_to_domoreexp.yml  configure_git_cookie_for_chromium_repo.yml  copy_artifact.yml  (+37 more)
buildflags/: BUILD.gn  buildflags.gni
configs/ffmpeg/: microsoft.json  slim.json
configs/mirror_repos/: depot_tools.json  electron_electron.json  nodejs_node.json
configs/publishing_layout/: electron_azure.layout.json  electron_ivy.layout.json  electron_upack.layout.json  node_headers_azure.layout.json
configs/templates/: dependencies.txt  release_wiki_page.html  third-party_attributions.txt
docs/: README.md  build.md  build_configs.md  chromium_snapshot.md  codestyle.md  get_the_code.md  hacks_and_workarounds.md  patches.md  publishing_layouts.md  sccache.md  scripts.md
docs/api/: system-session.md
docs/ci/: README.md
docs/how_to/: README.md  build_from_snapshot.md  create_vm_in_azure.md  download_electron_from_azure.md  patch_ffmpeg.md  update_electron_version.md
scripts/: apply_chromium_patches.py  assert_file_size.py  azure_pipelines_set_variable.py  calculate_checksum.py  change_defines_in_ffmpeg_config.py  checkout_chromium.py  chromium_version.py  clean_copy_of_chromium_tree.py  copy_ffmpeg_config.py  copy_file.py  copy_msdia_library.py  create_debugging_info_archive.py  create_publishing_layout.py  delete_files.py  download_external_binaries.py  download_impersonation_token.js  download_linux_sysroots.py  electron_version.py  exists.py  gclient.py  gclient_config.py  gclient_sync.py  generate_ivy_module_for_folder.js  generate_release_wiki.py  get_depot_tools.py  get_pair_value.py  git.bat  git_tag.py  gn_gen.py  install_linux_dependencies.py  ivy_branch_name.py  ivy_download_skype_ant.py  make_pairs.py  mirror_git_repo.py  node_version.py  print_electron_versions.js  process_template.py  run_electron.py  save_chromium_snapshot.py  touch.py  (+1 more)
scripts/azure/: create_virtual_machine.sh  deallocate_virtual_machine.sh  install_azure_pipelines_agent.ps1  install_azure_pipelines_agent.sh  linux_cloud_init.yml  run_script_on_azure_machine.sh
scripts/lib/: apt_get.py  args.py  build_flavour.py  canonical_arch.py  canonical_platform.py  chromium_version.py  deps.py  electron.py  filesystem.py  gclient.py  git.py  gn.py  project_paths.py  shasum.py  supported_platforms.py  two_to_three.py  versions.py
src/base/: manual_delay_load.cc  manual_delay_load.h
src/components/edge_adjust_headers/: BUILD.gn  adjust_trusted_headers.cc  adjust_trusted_headers.h  adjust_trusted_headers_manager.cc  adjust_trusted_headers_manager.h
src/components/edge_tenant/: BUILD.gn
src/components/edge_tenant/browser/: trv2_plugin_win.cc  trv2_plugin_win.h  trv2_policy_manager.cc  trv2_policy_manager.h  trv2_policy_manager_win.cc  trv2_policy_manager_win.h  trv2_policy_watcher_win.cc  trv2_policy_watcher_win.h  trv2_update_manager.cc  trv2_update_manager.h  trv2_utilities_win.cc  trv2_utilities_win.h  trv2_watchers_win.cc  trv2_watchers_win.h
src/components/edge_tenant/common/: BUILD.gn  trv2_policy.cc  trv2_policy.h
src/content/: sandbox_win.cc  sandbox_win.h
src/electron/: microsoft.gni
src/electron/lib/common/api/: cpu-profiler.js
src/electron/lib/renderer/: callbacks-registry.ts  ipc-messages.ts  objects-registry.ts  types.ts  utils.ts
src/electron/lib/renderer/api/: remote-client.ts  remote-server.ts
src/electron/shell/: node_bindings_ms.cc  node_bindings_ms.h
src/electron/shell/browser/: crash_checker.cc  crash_checker.h  message_wrapper.cc  message_wrapper.h  send_to_sync_handler.cc  send_to_sync_handler.h
src/electron/shell/common/: appcenter_api.cc  appcenter_api.h  memory_info.cc  memory_info.h  startup_metrics.cc  startup_metrics.h  startup_metrics_v8.cc  startup_metrics_v8.h  wer_api_win.cc  wer_api_win.h
src/electron/shell/common/api/: electron_common_cpu_profiler.cc  electron_common_cpu_profiler.h  process.cc  process.h  watchdog.cc  watchdog.h  watchdog_mac.mm
src/electron/shell/renderer/: direct_connection_manager.cc  direct_connection_manager.h  renderer_event.cc  renderer_event.h  renderer_service.cc  renderer_service.h
src/electron/spec/: dummy-spec.js  skypevideo-spec.js
src/electron/spec-main/: dummy-spec.ts
src/gpu/command_buffer/service/: BUILD.gn  buffer_manager_service.cc  buffer_manager_service.h  texture_manager_service.cc  texture_manager_service.h  utils.cc  utils.h
src/media_blink/: BUILD.gn  frame_sink_client.cc  frame_sink_client.h  image_info.cc  image_info.h  skypevideo_webmediaplayer.cc  skypevideo_webmediaplayer.h  triple_buffer.cc  triple_buffer.h
src/skype_video/: BUILD.gn  shared_memory.cc  shared_memory.h
(+147 files in other folders)
