# Copyright (C) Microsoft Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("edge_adjust_headers") {
  sources = [
    "adjust_trusted_headers.cc",
    "adjust_trusted_headers.h",
    "adjust_trusted_headers_manager.cc",
    "adjust_trusted_headers_manager.h",
  ]

  deps = [
    "//base",
    "//net:net",
    "//url",
  ]
}
